# sosig

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml  setup.cfg
src/sosig/: __init__.py  __main__.py
src/sosig/endpoints/: __init__.py  base.py  discord.py  irc.py  logger.py  slack.py
tests/endpoints/: test_slack.py
