[metadata]
name = sosig
description = Slack-tO-diScord brIdGe
long_description = file: README.md
long_description_content_type = text/markdown
author = Ash Holland
author_email = ash@sorrel.sh
url = https://github.com/sersorrel/sosig
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Programming Language :: Python :: 3 :: Only
    Topic :: Communications :: Chat
    Typing :: Typed

[options]
package_dir = =src
packages = find:
python_requires = >=3.8
setup_requires =
    setuptools-scm[toml] >= 3.5
install_requires =
    aiorun ~= 2021.8
    discord.py ~= 1.7
    slackclient ~= 2.5
    tomlkit ~= 0.7.0
    pydle ~= 0.9.4
    pure-sasl ~= 0.6.2

[options.extras_require]
test =
    pytest ~= 6.0
    pytest-asyncio ~= 0.14.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sosig = sosig.__main__:main

[mypy]
python_version = 3.8
